2005-10-25  Jeroen T. Vermeulen <jtv@xs4all.nl>
 win32/INSTALL.txt:
  - Removed thread-safety configure option
  - Removed --disable-shared from sample configuration options
  - Documented PQXX_SHARED
2005-10-03  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/util.cxx:
  - Include <cmath>.  Thanks rdieter.
2005-09-29  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in, src/largeobject.cxx:
  - Stop using libpq/libpq-fs.h, thanks DGCh-Geschaeftsstelle@t-online.de
 test/test062.cxx:
  - More extensive logging of discrepancies
  - strncmp() was wrong (locale-sensitive), thanks jmc@astro.caltech.edu
 win32/common:
  - Clearer explanations
  - Only need two libpq headers
2005-09-27  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx:
  - One more tweak on the auto_ptr problem
 include/pqxx/cursor.hxx:
  - Fixed Doxygen warning
 include/pqxx/largeobject.hxx, test/test050.cxx:
  - Test tell() and ctell()
 include/pqxx/util.hxx:
  - Arg 2 in ambiguous from_string()s was const, thanks Matthias Fischaleck
2005-09-22  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
  - Removed thread-safety option.
2005-09-20  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configitems, configure.ac.in, include/pqxx/largeobject.hxx,
 src/largeobject.cxx:
  - Added ctell() and tell() functions
2005-09-15  Jeroen T. Vermeulen <jtv@xs4all.nl>
 win32/INSTALL.txt:
  - Added missing -c to sample compiler command line, thanks Johnson Zhao
2005-09-13  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/binarystring.hxx:
  - Documented thread safety constraints
 include/pqxx/cursor.hxx, include/pqxx/transaction_base.hxx, src/cursor.cxx,
 src/transaction_base.cxx:
  - Removed unnecessary "mutable" in icursor_iterator
  - Made variable cache non-mutable
  - transaction_base::get_variable() is no longer const
2005-09-08  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/connection_base.hxx:
  - Hopefull fixed auto_ptr issue, thanks Maximiliano Pin.
2005-09-07  Jeroen T. Vermeulen <jtv@xs4all.nl>